src/styles/message-dropdown.module.css
.dropdownContainer {
  position: absolute;
  display: flex;
  flex-direction: column;
  padding: 0.1rem;
  background-color: var(--color-background-lighter);
  border-radius: 0.25rem;
  transform: translate(-75%, -100%);
  width: max-content;
  border: 1px solid var(--color-border);
  box-shadow: var(--shadow);
  z-index: 15;
}

.dropdownBtn {
  background-color: inherit;
  border-radius: 0.25rem;
  padding-inline: 0.5rem;
  padding-block: 0.5rem;
  display: flex;
  flex-direction: row;
  border: none;
  color: var(--text-primary);
}

.dropdownBtn span {
  margin-right: 1.5rem;
}

.dropdownBtn:hover {
  background-color: var(--color-surface-alt);
}

.dropdownBtn img {
  filter: invert(100%);
  margin-left: auto;
}

